show phone info

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+.show-info {
+  width: 100%;
+  border: 1px solid #dfdfdf;
+  padding: 20px;
+}
+
+.show-info img {
+  width: 250px;
+}
+
 @media (max-width: 768px) {
   .w-search {
     width: 100% !important;
